# app/Http/Resources/PostResource.php
@@ -4,6 +4,7 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
+use App\Http\Resources\LikeResource;
 
 class PostResource extends JsonResource
 {
@@ -23,6 +24,8 @@ class PostResource extends JsonResource
             'video' => $this->video,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
+            'likes' => LikeResource::collection($this->likes()->get()),
+            'like_count' => $this->Likes->count(),
         ];
     }
 }
