# storage/api-docs/api-docs.json
@@ -5,6 +5,137 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/like": {
+            "get": {
+                "tags": [
+                    "likes"
+                ],
+                "summary": "Display a listing of the likes.",
+                "operationId": "2d12ae81a7133f8b7b74c2c7a2e4934c",
+                "responses": {
+                    "200": {
+                        "description": "A list of likes.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/LikeResource"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/posts/like": {
+            "post": {
+                "tags": [
+                    "likes"
+                ],
+                "summary": "Store a newly created like.",
+                "operationId": "9b1efd08c60e934cd1ef72bf83d9ca3e",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LikeRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The created like.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/LikeResource"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Post not found."
+                    }
+                }
+            }
+        },
+        "/api/like/update/{id}": {
+            "put": {
+                "tags": [
+                    "likes"
+                ],
+                "summary": "Update the specified like.",
+                "operationId": "a6dbe41b2ee30514e032e94bb385b4be",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the like.",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LikeRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The updated like.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/LikeResource"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Like not found."
+                    }
+                }
+            }
+        },
+        "/api/posts/{id}/unlike": {
+            "delete": {
+                "tags": [
+                    "likes"
+                ],
+                "summary": "Remove the specified like from storage.",
+                "operationId": "b70fc721049113c313b4ff9209ad81bc",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the like.",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Post unliked successfully."
+                    },
+                    "404": {
+                        "description": "Like not found."
+                    }
+                }
+            }
+        },
         "/api/post": {
             "get": {
                 "tags": [
